# ChangeLog for games-emulation/qmc2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

  25 May 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta8.ebuild:
  Fixed thinko.

  25 May 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta8.ebuild:
  Fixed description, doh.

  25 May 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta8.ebuild:
  Added proper sdlmess support.

  05 May 2009; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.2_beta6.ebuild,
  -qmc2-0.2_beta7.ebuild, qmc2-0.2_beta8.ebuild:
  Removed cruft. Fixed phonon dep.

  24 Apr 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta8.ebuild:
  Bumped.

  17 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta7.ebuild,
  +files/qmc2-0.2_beta7-makefile.patch:
  Bumped. Will revisit sdlmess support later.

  17 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta6.ebuild:
  Fixed libsdl dep.

  15 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta6.ebuild:
  Fixed phonon dep.

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta6.ebuild:
  Fixed errors reported by repoman.

  14 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta6.ebuild:
  Ported to EAPI 2

  09 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta6.ebuild,
  +files/qmc2-0.2_beta6-makefile.patch, -files/qmc2-makefile.patch:
  Bumped. Removed cruft.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta3.ebuild,
  qmc2-0.2_beta4.ebuild:
  Fixed debug flag.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta5.ebuild:
  Bumped.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta4.ebuild:
  Added missing dep.

  28 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta4.ebuild:
  Bumped.

  02 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta3.ebuild:
  Simplified USE flag check.

  29 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.2_beta1.ebuild,
  -qmc2-0.2_beta2.ebuild, qmc2-0.2_beta3.ebuild:
  Replaced qt4_min_version. Removed cruft.
