@@ -1,5 +1,5 @@
 AUX qmc2-0.2_beta6-makefile.patch 596 RMD160 5e4bd86ec03abd6dfa5c7bcf740e75f76ce66296 SHA1 1b50d2e97579ff2a3722174c8507d3ef006f0f25 SHA256 228acee8c27d205b0e91029bbbd1eb5cce40df47d42029fe9fb625e65d3c5c3a
 AUX qmc2-0.2_beta7-makefile.patch 1021 RMD160 13aec8eee75248edde7fb94a86e0e78e5925d62d SHA1 10bab3943379c58a7fd7828068e350221758a6b9 SHA256 af3b20b2190204bf188c6257eda999bf64f754001e0fed83e42a1dde67f75605
 DIST qmc2-0.2.b8.tar.bz2 2144670 RMD160 a33ee9d6d692328bfccb065be320f43992269b09 SHA1 d00284d879f479e8bff695bfc11d237e4c1e66fb SHA256 fcf6a681e116f1d1f78a4b1e701f40d51cc88032dd61b19487ae96ada97ab9d5
-EBUILD qmc2-0.2_beta8.ebuild 1812 RMD160 3e5cf46f955b7c0fc9dd12f38a58dc5a8bbc1430 SHA1 ddfef6e627a3eb36d9157e00ac56fff83bf2d9c7 SHA256 cce428535d85820c78982a984ea23d7cf7e4928ecb2617cb45128088cced1d5d
-MISC ChangeLog 2979 RMD160 dd348c347976e0490a0e2ca435ce25be0ee9ef96 SHA1 68cab8abaf1e8853cbf17b9af03d69e8d964c4d1 SHA256 2f130e2f09af1e2fe8a418e35a262c1c9fa3869c6e5a14c03e4c6415e87d18d3
+EBUILD qmc2-0.2_beta8.ebuild 2168 RMD160 1941cd96f47ca9f64ff925cdb6af50b1c0eb8aa7 SHA1 a7c1b6096a84ad68797844f2b99eb52d769f5ef2 SHA256 d42e50dad63811d638d6860f38d9077f64143d67b313798e8a24b9c8cb9c9a80
+MISC ChangeLog 3242 RMD160 7d01a5c215af477bf371ff0516fdda4efb5462d8 SHA1 012270b30620f4f46af246f4fa365e0bd55bf220 SHA256 ea39fd76ccc24630fd17f931f2757accd7c84a3dd2a13f47320e0d8ca98cfa3a
